# cookiecutter-python-scaffolding

./: cookiecutter.json
{{cookiecutter.project_slug}}/: README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: test.yml
{{cookiecutter.project_slug}}/docs/: index.md
{{cookiecutter.project_slug}}/docs/how-to-guide/: index.md
{{cookiecutter.project_slug}}/scripts/: gen_ref_pages.py
{{cookiecutter.project_slug}}/src/: README.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: main.py
