# pyproject.toml

[build-system]
  requires = ["setuptools>=65.0.0"]
  build-backend = "setuptools.build_meta"

[project]
  name = "{{ cookiecutter.project_name }}"
  version = "0.0.1"
  authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
  ]
  description = "{{ cookiecutter.project_description }}"
  readme = "README.md"
  requires-python = ">=3.9"
  classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
  ]
  dependencies = []

[project.optional-dependencies]
  dev = [
    "pytest >= 7, < 8",
  ]

[project.urls]
  homepage = "https://github.com/[USERNAME]/{{ cookiecutter.project_slug }}"

[project.scripts]
  pipump = "[PACKAGE].[MODULE]:[FUNCTION]"