# pyproject.toml

[build-system]
  requires = ["setuptools>=65.0.0"]
  build-backend = "setuptools.build_meta"

[project]
  name = "{{ cookiecutter.project_slug }}"
  version = "0.0.1"
  authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
  ]
  description = "{{ cookiecutter.project_description }}"
  readme = "README.md"
  requires-python = ">=3.12,<3.13"
  classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
  ]
  dependencies = []

[project.optional-dependencies]
  dev = [
    "pytest >= 7, < 8",
    "pytest-cov >= 4, < 5",
  ]

[tools.pytest.ini_options]
  addopts = "-v --cov='src'"
  testpaths = "tests"

[project.urls]
  homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[project.scripts]
  {{ cookiecutter.project_slug }} = "main:main"