# pyproject.toml

[build-system]
  requires = ["setuptools>=65.0.0"]
  build-backend = "setuptools.build_meta"

[project]
  name = "{{ cookiecutter.project_slug }}"
  version = "0.0.1"
  authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
  ]
  description = "{{ cookiecutter.project_description }}"
  readme = "README.md"
  requires-python = ">=3.9,<3.13"
  classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
  ]
  dependencies = []

[project.optional-dependencies]
  dev = [
    "pytest >= 7, < 8",
    "pytest-cov >= 4, < 5",
  ]
  docs = [
    "mkdocs >= 1.5.3, < 2",
    "mkdocstrings[python] >= 0.24.0, < 1",
    "mkdocs-material >= 9.5.2, < 10",
    "mkdocs-gen-files >= 0.5.0, < 1",
    "mkdocs-literate-nav >= 0.6.1, < 1",
    "black >= 23.12.0, < 24",
  ]

[tools.pytest.ini_options]
  addopts = "-v --cov='src'"
  testpaths = "tests"

[project.urls]
  homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[project.scripts]
  {{ cookiecutter.project_slug }} = "{{ cookiecutter.main_package_name }}.main:main"